<resources>
    <string name="app_name">AgendaTelefonica</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="adicionar_contato">adicionar contato</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="tipo">Tipo</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tipo_de_telefone">tipo de telefone</string>
    <string name="editar">Editar</string>
    <string name="casa">Casa</string>
    <string name="celular">Celular</string>
    <string name="trabalho">Trabalho</string>
    <string name="contato">contato</string>
    <string-array name="tipos_telefone">
        <item>@string/casa</item>
        <item>@string/celular</item>
        <item>@string/trabalho</item>
    </string-array>
</resources>